# docs/swagger.json
@@ -277,11 +277,14 @@
                 "id": {
                     "type": "integer"
                 },
-                "lyrics": {
-                    "type": "string"
-                },
                 "song": {
                     "type": "string"
+                },
+                "verses": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         }
