# internal/handlers/get_song_by_name.go
@@ -2,6 +2,7 @@ package handlers
 
 import (
 	"database/sql"
+	"encoding/json"
 	"log"
 	"net/http"
 
@@ -28,8 +29,8 @@ func GetSongByName(db *sql.DB) gin.HandlerFunc {
 		log.Printf("[INFO] Fetching song with name: %s", songName)
 
 		var song models.Song
-		query := "SELECT id, song, \"group\", lyrics FROM songs WHERE song = $1"
-		err := db.QueryRow(query, songName).Scan(&song.ID, &song.Song, &song.Group, &song.Lyrics)
+		query := "SELECT id, song, \"group\", verses FROM songs WHERE song = $1"
+		err := db.QueryRow(query, songName).Scan(&song.ID, &song.Song, &song.Group, &song.Verses)
 
 		if err == sql.ErrNoRows {
 			log.Printf("[INFO] Song with name %s not found", songName)
@@ -40,6 +41,17 @@ func GetSongByName(db *sql.DB) gin.HandlerFunc {
 			c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to retrieve song"})
 			return
 		}
+
+		// Unmarshal the JSON string in `Verses` into a slice of strings
+		var verses []string
+		if err := json.Unmarshal([]byte(song.Verses), &verses); err != nil {
+			log.Printf("[ERROR] Error unmarshalling verses: %v", err)
+			c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to process song verses"})
+			return
+		}
+
+		// Assign the unmarshalled verses back to song.Verses as a slice of strings
+		song.Verses = verses
 
 		log.Printf("[INFO] Successfully fetched song: %s", songName)
 		c.HTML(http.StatusOK, "song.html", song)
