# internal/handlers/get_songs.go
@@ -4,6 +4,7 @@ import (
 	"database/sql"
 	"log"
 	"net/http"
+	"strings"
 
 	"github.com/Kocherga38/Library-of-Songs/internal/models"
 	"github.com/gin-gonic/gin"
@@ -25,7 +26,7 @@ func GetSongs(db *sql.DB) gin.HandlerFunc {
 		var songs []models.Song
 
 		log.Println("[DEBUG] Executing query to fetch all songs")
-		rows, err := db.Query("SELECT id, \"group\", song, lyrics FROM songs")
+		rows, err := db.Query("SELECT id, \"group\", song, verses FROM songs")
 		if err != nil {
 			log.Printf("[ERROR] Error while fetching songs: %v", err)
 			c.JSON(http.StatusInternalServerError, gin.H{"error": "Internal Server Error"})
@@ -36,11 +37,15 @@ func GetSongs(db *sql.DB) gin.HandlerFunc {
 		log.Println("[INFO] Iterating over the rows of songs")
 		for rows.Next() {
 			var song models.Song
-			if err := rows.Scan(&song.ID, &song.Group, &song.Song, &song.Lyrics); err != nil {
+			var verses string
+
+			if err := rows.Scan(&song.ID, &song.Group, &song.Song, &verses); err != nil {
 				log.Printf("[ERROR] Error scanning song: %v", err)
 				c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to read songs"})
 				return
 			}
+
+			song.Verses = strings.Split(verses, "\n")
 
 			log.Printf("[DEBUG] Adding song to the list: %s", song.Song)
 			songs = append(songs, song)
