# internal/handlers/post_song.go
@@ -2,6 +2,7 @@ package handlers
 
 import (
 	"database/sql"
+	"encoding/json"
 	"fmt"
 	"html/template"
 	"log"
@@ -11,6 +12,7 @@ import (
 
 	"github.com/Kocherga38/Library-of-Songs/internal/models"
 	"github.com/gin-gonic/gin"
+	"github.com/lib/pq"
 )
 
 // PostSong godoc
@@ -40,8 +42,8 @@ func PostSong(db *sql.DB) gin.HandlerFunc {
 
 		var existingSong models.Song
 		log.Printf("[INFO] Checking if song %s already exists", song.Song)
-		query := "SELECT id, \"group\", song, lyrics FROM songs WHERE song = $1"
-		err := db.QueryRow(query, song.Song).Scan(&existingSong.ID, &existingSong.Group, &existingSong.Song, &existingSong.Lyrics)
+		query := "SELECT id, \"group\", song, verses FROM songs WHERE song = $1"
+		err := db.QueryRow(query, song.Song).Scan(&existingSong.ID, &existingSong.Group, &existingSong.Song, &existingSong.Verses)
 		if err == nil {
 			log.Printf("[INFO] Song with name %s already exists", song.Song)
 			c.JSON(http.StatusConflict, gin.H{"error": "Song with this name already exists"})
@@ -55,10 +57,13 @@ func PostSong(db *sql.DB) gin.HandlerFunc {
 		}
 
 		log.Printf("[DEBUG] Received song data: %+v", song)
-		log.Printf("[DEBUG] Inserting song: Group=%s, Song=%s, Lyrics=%s", song.Group, song.Song, song.Lyrics)
-		insertQuery := "INSERT INTO songs (\"group\", song, lyrics) VALUES ($1, $2, $3) RETURNING id"
+		log.Printf("[DEBUG] Inserting song: Group=%s, Song=%s, Verses=%s", song.Group, song.Song, song.Verses)
+
+		insertQuery := "INSERT INTO songs (\"group\", song, verses) VALUES ($1, $2, $3) RETURNING id"
+
 		var newID int
-		err = db.QueryRow(insertQuery, song.Group, song.Song, song.Lyrics).Scan(&newID)
+		err = db.QueryRow(insertQuery, song.Group, song.Song, pq.Array(song.Verses)).Scan(&newID)
+
 		if err != nil {
 			log.Printf("[ERROR] Failed to create song: %v", err)
 			c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to create song"})
@@ -90,16 +95,13 @@ func createSongPage(song models.Song) error {
 	log.Println("[DEBUG] Template parsed successfully")
 
 	outputDir := "public/songs"
-	log.Printf("[INFO] Ensuring the output directory (%s) exists", outputDir)
 	err = os.MkdirAll(outputDir, os.ModePerm)
 	if err != nil {
 		log.Printf("[ERROR] Failed to create directory: %v", err)
 		return err
 	}
-	log.Println("[DEBUG] Output directory created/verified successfully")
 
 	filename := filepath.Join(outputDir, fmt.Sprintf("%s.html", song.Song))
-	log.Printf("[INFO] Creating song file: %s", filename)
 	file, err := os.Create(filename)
 	if err != nil {
 		log.Printf("[ERROR] Failed to create file: %v", err)
@@ -107,11 +109,16 @@ func createSongPage(song models.Song) error {
 	}
 	defer file.Close()
 
-	log.Printf("[DEBUG] Writing data to song page file for song: %s", song.Song)
+	versesJSON, err := json.Marshal(song.Verses)
+	if err != nil {
+		log.Printf("[ERROR] Failed to marshal verses: %v", err)
+		return err
+	}
+
 	err = template.Execute(file, gin.H{
 		"Song":   song.Song,
 		"Group":  song.Group,
-		"Lyrics": song.Lyrics,
+		"Verses": string(versesJSON),
 	})
 
 	if err != nil {
