# internal/models/song.go
@@ -1,8 +1,8 @@
 package models
 
 type Song struct {
-	ID     int    `json:"id"`
-	Group  string `json:"group"`
-	Song   string `json:"song"`
-	Lyrics string `json:"lyrics"`
+	ID     int      `json:"id"`
+	Group  string   `json:"group"`
+	Song   string   `json:"song"`
+	Verses []string `json:"verses"`
 }
